# tree-sitter-scl

./: .gitignore  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-scl.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc  index.d.ts
bindings/python/tree_sitter_scl/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
examples/: minimal.scl  on_activation.scl  on_demand_generation.scl  sample.scl  simple.scl
old/: scl.tmLanguage.json
old/examples/: on_accrual.scl  on_booking.scl  on_demand_satisfaction.scl
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: expressions.txt  scl_builtins.txt  statements.txt
