[package]
name = "tree-sitter-scl"
description = "SCL (Smart Contracts Language) grammar for tree-sitter"
version = "1.0.0"
license = "Apache-2.0"
readme = "README.md"
keywords = ["tree-sitter", "scl", "smart-contracts"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/ZoralLabs/tree-sitter-scl"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = ">=0.22.6"

[build-dependencies]
cc = "1.0.87"
